--- a/components.json
+++ b/components.json
@@ -13,5 +13,8 @@
   "aliases": {
     "components": "@/components",
     "utils": "@/lib/utils"
+  },
+  "registries": {
+    "@ss-blocks": "https://blocks.shadcn-svelte.com/r"
   }
 }
