--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "types:supabase": "npx supabase gen types typescript --project-id $SUPABASE_PROJECT_ID > src/types/supabase.ts",
-    "test:e2e": "playwright test"
+    "test:e2e": "playwright test",
+    "test:responsive": "playwright test tests/responsive.spec.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.6.0",
