feat: add bento grid component with animated beams and SVG icons
- Implemented the BentoGrid component featuring multiple sections including Smart Data Insights, Modular Dashboards, Live Collaboration, Workflow Automation, and Integrated Data Security.
- Introduced ShieldCheck SVG icon for Integrated Data Security section.
- Created Collaboration component with animated beams connecting avatars to a logo.
- Developed SmartData component showcasing brand logos with animated beams.
- Added WorkflowAutomation component with icons representing different stages of workflow.
- Implemented AnimatedBeam component for dynamic visual connections between elements.
- Enhanced UI with responsive design and motion effects for improved user experience.

--- a/components.json
+++ b/components.json
@@ -10,6 +10,10 @@
     "cssVariables": true,
     "prefix": ""
   },
+  "registries": {
+    "@ss-blocks": "https://www.shadcn.io/api/registry/blocks/{name}",
+    "@ss-components": "https://www.shadcn.io/api/registry/components/{name}"
+  },
   "aliases": {
     "components": "@/components",
     "utils": "@/lib/utils"
