--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.5",
-    "framer-motion": "^11.18.0",
+    "framer-motion": "12.23.24",
     "lucide-react": "^0.394.0",
     "motion": "^12.23.24",
     "react": "^18.3.1",
